--- a/hello-dolly-2/package.json
+++ b/hello-dolly-2/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@wordpress/block-editor": "^11.5.0",
-    "@wordpress/blocks": "^12.5.0"
+    "@wordpress/blocks": "^12.5.0",
+    "@wordpress/server-side-render": "^4.6.0"
   }
 }
